Added a draft pixel art, new buttons and external pages

--- a/src/guide.html
+++ b/src/guide.html
@@ -13,14 +13,14 @@
     <div class="header-bar">
       <div class="header-sidebar"></div>
       <div class="header-text">
-        <i>Sign up! </i> <span class="subtitle"> > Ishi is asking your username..</span>
+        <i> About us! </i> <span class="subtitle"> > Ishi is gonna tell you what we do..</span>
       </div>
     </div>
   </header>
 
   <div id="secondDescrp">
-    <h2>Welcome to the Sign up Page!</h2>
-    <p>Tell Ishi to Make you an account!</p>
+    <h2>Welcome to the About Page!</h2>
+    <p>Talk to Ishi!</p>
   </div>
 
   <button id="backBtn" class="small-btn">
