--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,29 @@
      </div>
     </header>
     
+    <div class="three-container">   
     <h1 id="welcomeHeader"> <b> Welcome...</b></h1>
 
     <div class="buttonguide"> 
-      <p> <i>Ever wondered how to carry a full week without <br> feeling full of clutter? how to keep tasks, <br>  plans, and numbers close in one place, <br>without it weighing you down? </i></p>
+      <p> <i> Welcome to the world of Ishi To Go! Your fun, <br> colorful companion for tasks and budgets, <br> turning everyday planning a little bit <br> more interactive! </i></p>
     </div>
-  
-    <button id="playBtn">
-    <span>A</span><span></span><span>s</span><span>k</span> <span>I</span><span>s</span><span>h</span><span>i</span><span>!</span>
+
+
+    <button class="playBtn"  onclick="location.href='guide.html'">
+    <span>A</span><span></span><span>b</span><span>o</span><span>u</span><span>t</span>
     </button>
+    <button class="playBtn" onclick="location.href='loginPage.html'">
+    <span>L</span><span>o</span><span>g</span><span>i</span><span>n</span>
+    </button>
+    <p id="create">Don't have an account? <a href="signup.html">Create Account</a> now... </p>
+    </div>
 
+    <div id="table">
+       <img src="../media/Sleepingishi.png" alt="Sleeping Ishie" class="table-overlay">
+    </div>
 
+   <footer class="main-footer">   
+   </footer>
 
 
 <script src="script.js"></script>
