--- a/src/signup.html
+++ b/src/signup.html
@@ -13,22 +13,23 @@
     <div class="header-bar">
       <div class="header-sidebar"></div>
       <div class="header-text">
-        <i> Where to go! </i> <span class="subtitle"> > Ishi is asking you where you wanna go..</span>
+        <i>Sign up! </i> <span class="subtitle"> > Ishi is asking your username..</span>
       </div>
     </div>
   </header>
 
   <div id="secondDescrp">
-    <h2>Welcome to the Next Page!</h2>
-    <p>Talk to Ishi!</p>
+    <h2>Welcome to the Sign up Page!</h2>
+    <p>Tell Ishi to Make you an account!</p>
   </div>
 
   <button id="backBtn" class="small-btn">
     <span>G</span><span>o</span>&nbsp;<span>b</span><span>a</span><span>c</span><span>k</span></span>
   </button>
 
-  <footer class="main-footer">
   
+  <footer class="main-footer">
+       
   </footer>
 
   <script>
