added a draft of animation of pixel art

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div id="table">
-       <img src="../media/Sleepingishi.png" alt="Sleeping Ishie" class="table-overlay">
+       <img src="../media/Ishisleeping.GIF" alt="Sleeping Ishie" class="table-overlay">
     </div>
 
    <footer class="main-footer">   
